@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1059 2009-08-28 17:33:29 castaglia Exp $
+$Id: NEWS,v 1.1060 2009-09-01 18:39:12 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -34,6 +34,8 @@ CVS
   from 1.3.0a to 1.3.2a.
 - Bug 3279 - .ftpaccess configurations not merged properly with existing
   configuration.
+- Bug 3287 - MaxTransfersPerHost, MaxTransfersPerUser directives not supported
+  properly.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
